# pdf-page-counter

./: LICENSE  README.md  environment_requirements.txt  pdfpagenumber.py  pdfpagenumbertest.py  pyproject.toml  setup.cfg
pdf-page-counter/: pdfpagenumber.py  pdfpagenumbertest.py
