[metadata]
name = pdf-page-counter
description = Counts the absolute number of pages in a PDF document, even if it is a compund document containing several PDF documents.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
version = 1.1.0
license = MIT
author = Thomas Grasse
author_email = thomas.grasse@exercim.com
maintainer = Thomas Grasse
maintainer_email = thomas.grasse@exercimn.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find: 
python_requires = >=3.6
dist-dir = dist/pypi
